MFLT-8983 Teams: Write public documentation (#392)
 This documents the upcoming Teams and Roles features. Additionally:

 - Updated all mentions of "admin" and "administrator" across all pages,
   changing them to "Organization Admin" (sic).
 - Removed some info from the User Management page and linked to the new
   Teams page.
 - Linked to the Teams page wherever appropriate.

 Latest snapshot:

 ![image](https://user-images.githubusercontent.com/16181067/219370883-57498ccb-5fdd-4e3a-8700-edf6fe990d85.png)

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -162,7 +162,11 @@ through the web UI or programmatically via a web endpoint -- no need to deploy
 an app or OS update.
 
 The settings can be found in the `Settings` part of the web UI. SDK settings are
-only visible to and configurable by project administrators.
+only visible to and configurable by [Project Managers][project-managers] and
+[Organization Admins][organization-admins].
+
+[project-managers]: /docs/platform/access-control-teams-roles#manager
+[organization-admins]: /docs/platform/access-control-teams-roles#admin
 
 :::note Rate Limiting
 
