--- a/docs/platform/user-management.mdx
+++ b/docs/platform/user-management.mdx
@@ -4,8 +4,8 @@ title: User Management
 sidebar_label: User Management
 ---
 
-Organization Admins can add, remove, view and update members of their
-organization on Memfault.
+[Organization Admins][organization-admins] can add, remove, view and update
+members of their organization on Memfault.
 
 To see a list of users navigate to **Admin > Users**. This panel also allows you
 to change the role of existing user accounts and remove users from your
@@ -34,15 +34,11 @@ below. New users are added as **Member** by default. Users can be upgraded to
 
 If you are unable to view the **Admin** panel for your organization, this is
 because your Memfault account is not an **Admin** account. Contact your
-organization's administrator to change the role on your account. If you do not
-know who your organization's administrator is, email us at support@memfault.com.
+Organization Admin to change the role on your account. If you do not know who
+your Organization Admin is, email us at support@memfault.com.
 
-Note: users with role **Admin** will be able to:
+To manage access control of users within your Organization, see [Access Control:
+Teams and Roles][teams].
 
-1. Access the **Admin** panel for your organization
-2. Update the roles of other users
-3. Invite new users to your organization
-4. Remove users from your organization
-5. Create new projects for your organization
-6. Create new Organization Auth Tokens
-7. Delete existing Organization Auth Tokens
+[teams]: /docs/platform/access-control-teams-roles
+[organization-admins]: /docs/platform/access-control-teams-roles#admin
