Add list of supported ESP32 families (#398)

--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -23,6 +23,19 @@ This integration is tested on the
 [ESP32-WROVER-KIT V4.1](https://docs.espressif.com/projects/esp-idf/en/v4.4.1/esp32/hw-reference/esp32/get-started-wrover-kit.html),
 but applies similarly to any ESP32-based board.
 
+:::tip
+
+Currently Memfault supports the following ESP32 part families. If it's not
+listed, we might be working on it already! Drop us a note at
+[support@memfault.com](mailto:support@memfault.com) and we'll let you know!
+
+- [ESP32](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32/get-started/index.html)
+- [ESP32-S2](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s2/get-started/index.html)
+- [ESP32-S3](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s3/get-started/index.html)
+- [ESP32-C3](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32c3/get-started/index.html)
+
+:::
+
 ### Clone Memfault SDK
 
 Using a [Git](https://git-scm.com/) client, clone the `memfault-firmware-sdk`
