Switch a couple of sections to `linker-script` (#401)
Highlighting is a touch better than \`\`\`c

--- a/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
+++ b/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
@@ -256,7 +256,7 @@ implementation.
 
    2. Add the following file at `source/gnu_build_id.ld`:
 
-      ```c
+      ```linker-script
       /*
         Custom section to be included in the linker
         command file, to support GNU build id.
