Update fleet sampling docs for Android (#404)
- Correct logging for each aspect.
- Add HRT.

Co-authored-by: sjp4 <sjp4@users.noreply.github.com>

--- a/docs/platform/fleet-sampling.mdx
+++ b/docs/platform/fleet-sampling.mdx
@@ -23,13 +23,18 @@ Each device in the fleet can be configured by turning their specific Fleet
 Sampling Aspects on or off. See the differences between the aspects and their
 respective states in the table:
 
-| Platform | Aspects    | Resolution: Off                                    | Resolution: On                                                                                                                                                                                                                                                                                                                                                                |
-| -------- | ---------- | -------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Android  | Monitoring | Only periodic device check-ins                     | [Batterystats](/docs/android/android-builtin-metrics#battery-and-related-metrics) and [Custom Metrics](/docs/android/android-custom-metrics) are collected every 2h                                                                                                                                                                                                           |
-| Android  | Debugging  | No crash collection                                | [Crash reports (via Bug Reports or Caliper)](/docs/android/android-bort#collection-types---bug-reports-and-caliper), [reboot reasons](/docs/android/android-reboot-events) and [Custom Events](/docs/android/custom-events) are collected                                                                                                                                     |
-| Android  | Logging    | No logs, except if they are part of a crash report | Log collection and upload in the case of an overlap with a trace event (see details [here](/docs/android/android-logging)). Logs that have been already collected on the device and not yet sent will also be uploaded as soon as the device receives the logging resolution change to `On`. For details, see [Log Collection](/docs/platform/fleet-sampling#log-collection). |
-| MCU      | Monitoring | Only periodic device check-ins                     | Periodic collection of [Metrics](/docs/mcu/metrics-api) with heartbeats                                                                                                                                                                                                                                                                                                       |
-| MCU      | Debugging  | No crash/debug data collection                     | [Coredumps](/docs/mcu/coredumps), [trace events](/docs/mcu/trace-events), [reboot reasons](/docs/mcu/reboot-reason-tracking) and [Custom Data Recordings](/docs/mcu/custom-data-recording) are collected                                                                                                                                                                      |
+| Platform | Aspects    | Resolution: Off                                    | Resolution: On                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| -------- | ---------- | -------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Android  | Monitoring | Only periodic device check-ins                     | [Batterystats](/docs/android/android-builtin-metrics#battery-and-related-metrics) metrics and [Custom Metrics](/docs/android/android-custom-metrics) are collected every 2h                                                                                                                                                                                                                                                                                                                                         |
+| Android  | Debugging  | No crash/log collection                            | [Crash reports (via Bug Reports or Caliper)](/docs/android/android-bort#collection-types---bug-reports-and-caliper), [reboot reasons](/docs/android/android-reboot-events), [High-Resolution Telemetry](/docs/android/android-custom-metrics#high-resolution-telemetry-hrt) (including high-resolution battery metrics) and [Custom Events](/docs/android/custom-events) are collected. Log collection and upload in the case of an overlap with a trace event (see details [here](/docs/android/android-logging)). |
+| Android  | Logging    | No logs, except if they are part of a crash report | All log files are uploaded. For details, see [Log Collection](/docs/platform/fleet-sampling#log-collection).                                                                                                                                                                                                                                                                                                                                                                                                        |
+| MCU      | Monitoring | Only periodic device check-ins                     | Periodic collection of [Metrics](/docs/mcu/metrics-api) with heartbeats                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| MCU      | Debugging  | No crash/debug data collection                     | [Coredumps](/docs/mcu/coredumps), [trace events](/docs/mcu/trace-events), [reboot reasons](/docs/mcu/reboot-reason-tracking) and [Custom Data Recordings](/docs/mcu/custom-data-recording) are collected                                                                                                                                                                                                                                                                                                            |
+
+On Android, data is stored on the device when the relevant resolution is "Off"
+(up to configured storage limits). When a resolution is turned to "On" then any
+previously stored data for that resolution is uploaded - e.g. when the Logging
+resolution is enabled then all previously stored logs will be uploaded.
 
 :::note
 
