Add deep link for coredump storage tabs (#417)
From:

https://docusaurus.io/docs/markdown-features/tabs#query-string

OT would be cool to automatically generate these, but we don't have that
many `<Tabs>` elements so not a huge deal.

--- a/src/pages/_partials/_steps/_coredump-dependency.mdx
+++ b/src/pages/_partials/_steps/_coredump-dependency.mdx
@@ -28,6 +28,7 @@ takes place.
     { label: "NXP S32 SDK", value: "NXP" },
     { label: "Other", value: "Other" },
   ]}
+  queryString="coredump-storage"
 >
   <TabItem value="RAM">
 
