Enable deep linking to add-sources tabs (#418)
![](https://i.imgur.com/JfATMLM.png)

--- a/src/pages/_partials/_steps/_add-sources.mdx
+++ b/src/pages/_partials/_steps/_add-sources.mdx
@@ -11,6 +11,7 @@ follow the steps to add the sources to your target
     { label: "CMake", value: "CMake" },
     { label: "Other", value: "Other" },
   ]}
+  queryString="add-sources"
 >
   <TabItem value="Make">
 
