Fix a typo in the gdb-docker example (#419)
Image name was incorrect, didn't work.

--- a/docs/mcu/coredump-elf-with-gdb.mdx
+++ b/docs/mcu/coredump-elf-with-gdb.mdx
@@ -169,11 +169,11 @@ Then run this command from a terminal:
 # mounted inside the container ('--volume' argument)
 
 # Powershell or bash:
-$ docker run --rm --tty --interactive --volume "${PWD}":/data memfault:multi-arch-gdb \
+$ docker run --rm --tty --interactive --volume "${PWD}":/data memfault/multi-arch-gdb \
   gdb --se example/symbol_file.elf --core example/coredump.elf
 
 # Windows cmd.exe:
-$ docker run --rm --tty --interactive --volume "%cd%":/data memfault:multi-arch-gdb \
+$ docker run --rm --tty --interactive --volume "%cd%":/data memfault/multi-arch-gdb \
   gdb --se example/symbol_file.elf --core example/coredump.elf
 ```
 
